# Hamburglar

./: .dockerignore  .gitignore  .hamburglar.py.swp  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST  MANIFEST.in  MIGRATION.md  MODERNIZATION_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  ham.conf  hamburglar-lite.py  hamburglar.py  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  tableScraper.py
.github/workflows/: docker.yml  release.yml  test.yml
Auto Run Docs/: Phase-01-Foundation-And-Working-Prototype.md  Phase-02-Complete-Test-Coverage-And-Error-Handling.md  Phase-03-Expanded-Detection-Library.md  Phase-04-Async-Architecture-And-Performance.md  Phase-05-Git-And-Web-Scanning.md  Phase-06-Output-Formats-And-Integrations.md  Phase-07-Docker-And-Distribution.md  Phase-08-Configuration-And-Extensibility.md  Phase-09-Documentation-And-Polish.md  Phase-10-Legacy-Migration-And-Cleanup.md
Hamburglar/: __main__.py
Hamburglar/rules/: gif.yar  jpeg.yar  pdf.yar  vector.yar  win_reg.yar
Hamburglar/utils/: magic_sig_scraper.py
archive/: README.md  ham_v1.conf  hamburglar_v1.py  magic_sig_scraper_v1.py
docs/: changelog.md  cli-reference.md  configuration.md  contributing.md  detectors.md  index.md  installation.md  outputs.md  plugins.md  quickstart.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
examples/: hamburglar.example.yml
examples/plugins/: custom_detector.py
rules/: apple.yar  audio.yar  compressed.yar  executables.yar  gps.yar  mem_dumps.yar  office.yar  skype.yar  sqlite.yar  vcard.yar  video.yar  vmware.yar
scripts/: docker-build.sh  migrate-config.py  publish.sh
src/hamburglar/: __init__.py  api.py
src/hamburglar/cli/: __init__.py  errors.py  main.py
src/hamburglar/compat/: __init__.py  ioc_extract.py  legacy_patterns.py
src/hamburglar/config/: __init__.py  env.py  loader.py  schema.py
src/hamburglar/core/: __init__.py  async_scanner.py  exceptions.py  file_filter.py  file_reader.py  http_client.py  logging.py  models.py  profiling.py  progress.py  scanner.py  stats.py
src/hamburglar/detectors/: __init__.py  entropy_detector.py  regex_detector.py  yara_detector.py
src/hamburglar/detectors/patterns/: __init__.py  api_keys.py  cloud.py  credentials.py  crypto.py  generic.py  network.py  private_keys.py
src/hamburglar/outputs/: __init__.py  csv_output.py  html_output.py  json_output.py  markdown_output.py  sarif.py  streaming.py  table_output.py
src/hamburglar/plugins/: __init__.py  detector_plugin.py  discovery.py  output_plugin.py
src/hamburglar/rules/: __init__.py  crypto.yar  png.yar
src/hamburglar/scanners/: __init__.py  directory.py  git.py  git_history.py  web.py
src/hamburglar/storage/: __init__.py  json_file.py  sqlite.py
src/hamburglar/utils/: __init__.py  hexdump.py
tests/: __init__.py  conftest.py  test_api.py  test_async_scanner.py  test_base_scanner.py  test_binary_files.py  test_cli.py  test_cli_async.py  test_cli_categories.py  test_cli_config.py  test_cli_coverage.py  test_cli_doctor.py  test_cli_dry_run.py  test_cli_error_suggestions.py  test_cli_errors.py  test_cli_formats.py  test_cli_git.py  test_cli_hexdump.py  test_cli_iocextract.py  test_cli_min_confidence.py  test_cli_output_dir.py  test_cli_plugins.py  test_cli_save_to_db.py  test_cli_web.py  test_config_fixtures.py  test_config_loading.py  test_config_schema.py  test_coverage_completion.py  test_csv_output.py  test_detector_plugin.py  test_directory_scanner.py  test_docker.py  test_encoding.py  test_entropy_detector.py  test_error_handling.py  test_example_custom_detector.py  test_exceptions.py  test_file_filter.py  test_file_reader.py  test_git_history.py  (+48 more)
tests/fixtures/: clean_file.txt  mixed_encoding.txt  secret_file.txt
tests/fixtures/configs/: README.md  empty.toml  invalid_syntax.json  invalid_syntax.toml  invalid_syntax.yml  invalid_values.json  invalid_values.toml  invalid_values.yml  minimal.json  minimal.toml  minimal.yml  valid_basic.json  valid_basic.toml  valid_basic.yml  valid_full.json  valid_full.toml  valid_full.yml
tests/fixtures/git/: __init__.py  conftest.py
tests/fixtures/patterns/: README.md  api_keys.txt  cloud.txt  credentials.txt  crypto.txt  generic.txt  network.txt  private_keys.txt
