[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hamburglar"
version = "2.0.0"
description = "A static analysis tool for extracting sensitive information from files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "needmorecowbell", email = "adam@needmorecowbell.dev" }
]
keywords = [
    "security",
    "secrets",
    "scanner",
    "static-analysis",
    "sensitive-data",
    "yara",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "yara-python>=4.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
hamburglar = "hamburglar.cli.main:app"

[project.urls]
Homepage = "https://github.com/needmorecowbell/Hamburglar"
Repository = "https://github.com/needmorecowbell/Hamburglar"
Issues = "https://github.com/needmorecowbell/Hamburglar/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hamburglar"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/rules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.coverage.run]
source = ["src/hamburglar"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
