[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hamburglar"
version = "2.0.0"
description = "A static analysis tool for extracting sensitive information from files, git repositories, and URLs using regex patterns and YARA rules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "needmorecowbell", email = "adam@needmorecowbell.dev" }
]
maintainers = [
    { name = "needmorecowbell", email = "adam@needmorecowbell.dev" }
]
keywords = [
    "security",
    "secrets",
    "scanner",
    "static-analysis",
    "sensitive-data",
    "yara",
    "secret-detection",
    "credential-scanner",
    "security-scanner",
    "code-analysis",
    "git-scanner",
    "regex-scanner",
    "vulnerability-scanner",
    "data-leak",
    "api-keys",
    "private-keys",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "yara-python>=4.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "charset-normalizer>=3.0.0",
    "pyyaml>=6.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[project.scripts]
hamburglar = "hamburglar.cli.main:app"

[project.urls]
Homepage = "https://github.com/needmorecowbell/Hamburglar"
Documentation = "https://github.com/needmorecowbell/Hamburglar#readme"
Repository = "https://github.com/needmorecowbell/Hamburglar"
Issues = "https://github.com/needmorecowbell/Hamburglar/issues"
Changelog = "https://github.com/needmorecowbell/Hamburglar/releases"

[tool.hatch.build]
# Include YARA rules as package data
include = [
    "src/hamburglar/**/*.py",
    "src/hamburglar/rules/*.yar",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hamburglar"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/rules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests requiring external dependencies (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.coverage.run]
source = ["src/hamburglar"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 90

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E402",   # Module level import not at top of file (intentional for lazy imports)
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (Typer uses this pattern)
    "B027",   # Empty method in abstract base class without @abstractmethod (intentional optional methods)
    "B904",   # raise without from in except (intentional for CLI exit patterns)
    "SIM105", # Use contextlib.suppress (not always clearer)
    "SIM108", # Use ternary operator (not always clearer)
    "SIM102", # Use a single if statement (not always clearer)
    "SIM103", # Return the condition directly (not always clearer)
    "SIM110", # Use all/any (not always clearer)
    "SIM115", # Use context manager for opening files (not always applicable)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files are intentional re-exports
"tests/*" = ["F401", "F811"]  # Tests may have unused imports for fixtures

[tool.ruff.lint.isort]
known-first-party = ["hamburglar"]
